tests/__snapshots__/validation-testFileMatch-cannot-start-with-0.snap.txt
Error: A test file match pattern cannot start with '/'.

The test files are only collected within the 'rootPath' directory.

  1 | {
  2 |   "testFileMatch": [
> 3 |     "/feature"
    |     ^
  4 |   ]
  5 | }

      at ./tstyche.config.json:3:5

